--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="keepWindowInsetsPadding">keepWindowInsetsPadding</string>
+
     <string name="undefined">未定义</string>
 
     <string name="common_permission_hint">授权提示</string>
